--- a/home/templates/profile.html
+++ b/home/templates/profile.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="collapse navbar-collapse no_left no_right bs-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <a href="/"><img src="{% static 'images/alpha.png' %}" height="20px" style="cursor: pointer;" alt="logo"></a>
+                        <a href="/"><img src="{% static 'images/alpha_home.png' %}" height="20px" style="cursor: pointer;" alt="logo"></a>
                         {% if request.user.is_authenticated %}
                         <li><a href="{% url 'support' %}">Тех. Поддержка</a></li>
                         <li><a href="{% url 'panel' %}">Панель</a></li>
