--- a/home/templates/components/navbar.html
+++ b/home/templates/components/navbar.html
@@ -2,7 +2,7 @@
 <nav id="header" class="navbar is-{{ panel_style_primary }}" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="{% url 'main' %}">
-            <img src="{% static 'images/alpha.png' %}" width="112" height="28">
+            <img src="{% static 'images/alpha_home.png' %}" width="112" height="28">
         </a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
