Fixed onesignal and metrics into html

--- a/home/templates/products.html
+++ b/home/templates/products.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'bulma/css/bulma.css' %}">
     <link rel="stylesheet" href="{% static 'bulma/bulma.sass' %}">
     <script src="{% static 'js/bulma-manu-burger.js' %}"></script>
+    {% include "onesignal.html" %}
 </head>
 <body>
 <header>
