--- a/home/templates/help.html
+++ b/home/templates/help.html
@@ -11,15 +11,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href="{% static 'landing/css/normalize.css' %}"/>
-    <link rel="manifest" href="/manifest.json"/>
     <link rel="stylesheet" href="{% static 'bulma/css/bulma.css' %}">
     <link rel="stylesheet" href="{% static 'bulma/bulma.sass' %}">
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/png">
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-    <script> var OneSignal = window.OneSignal || [];
-    OneSignal.push(function () {
-        OneSignal.init({appId: "cb29d800-22dc-4542-8f3a-4c9173bbe042",});
-    }); </script>
+    {% include "onesignal.html" %}
 </head>
 
 <body class="home">
@@ -125,43 +120,7 @@
     </article>
 
 
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-        ym(53512972, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-
-    </script>
-    <noscript>
-        <div><img src="https://mc.yandex.ru/watch/53512972" style="position:absolute; left:-9999px;" alt=""/></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139390565-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'UA-139390565-1');
-
-    </script>
+    {% include 'metrics.html' %}
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
