--- a/static/css/control_panel.css
+++ b/static/css/control_panel.css
@@ -1,7 +1,7 @@
-html, body, header, footer{
+html, body, header, footer {
     padding: 0;
     margin: 0;
-    background-color: rgb(3,3,3);
+    background-color: rgb(3, 3, 3);
     font-family: 'Maven Pro', sans-serif;
     font-size: 30px;
     color: #FFFFF0;
@@ -9,15 +9,21 @@ html, body, header, footer{
 }
 
 main, .mainer {
-    background-color: rgb(17,18,19);
-    height: 88vh;
+    background-color: rgb(17, 18, 19);
+    height: 90vh;
     overflow: hidden;
     padding: 10px;
 }
 
 footer {
     font-size: 16px;
-    padding: 5px;
+    font-family: 'Patrick Hand SC', cursive;
+    padding: 0;
+    margin: 0;
+}
+
+h4 {
+    font-size: 18px;
 }
 
 .blocks {
@@ -25,36 +31,59 @@ footer {
     height: 82vh;
     margin: 10px;
     overflow: auto;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 
 .buttons_menu {
-
+    align-items: center;
+    margin: 20px;
+    cursor: pointer;
+    color: #FFFFF0;
+    border-radius: 6%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 14%;
 }
 
-/* vietnamese */
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Maven Pro Regular'), local('MavenPro-Regular'), url(https://fonts.gstatic.com/s/mavenpro/v12/7Au9p_AqnyWWAxW2Wk3GwmQIElsO02Ex.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+.buttons_menu:hover {
+    background-color: rgb(19, 17, 19);
+    color: gray;
+    transition: 0.5s;
 }
-/* latin-ext */
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Maven Pro Regular'), local('MavenPro-Regular'), url(https://fonts.gstatic.com/s/mavenpro/v12/7Au9p_AqnyWWAxW2Wk3Gw2QIElsO02Ex.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+
+.buttons_menu img {
+    width: 50%;
+    height: 50%;
 }
-/* latin */
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Maven Pro Regular'), local('MavenPro-Regular'), url(https://fonts.gstatic.com/s/mavenpro/v12/7Au9p_AqnyWWAxW2Wk3GzWQIElsO0w.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+
+@media all and (max-width: 1280px){
+    .buttons_menu {
+        font-size: 0;
+    }
+    .buttons_menu img{
+        width: 80%;
+        height: 80%;
+    }
+}
+
+.components {
+    background-color: rgb(3, 3, 3);
+    width: 99%;
+    min-height: 6vh;
+    color: #fffee2;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 7px;
+}
+
+.components img{
+    padding: 7px;
+}
+
+.params {
+    text-align: center;
+    font-size: 22px;
 }
