Added modals of confirm, input1, input2

--- a/home/templates/components/panel/management_room.html
+++ b/home/templates/components/panel/management_room.html
@@ -25,7 +25,7 @@
         </section>
         <footer class="modal-card-foot">
             <button class="button" onclick="close_modal(2)">Закрыть</button>
-            <button class="button"><a href="{% url 'edit_home' home=houses.current.id %}">{% if rooms.other|length != 0 %}Редактировать{% else %}Добавить{% endif %}</a></button>
+{#            <button class="button"><a href="{% url 'edit_home' home=houses.current.id %}">{% if rooms.other|length != 0 %}Редактировать{% else %}Добавить{% endif %}</a></button>#}
         </footer>
     </div>
 </div>
