--- a/home/templates/components/panel/management_house.html
+++ b/home/templates/components/panel/management_house.html
@@ -25,7 +25,7 @@
         </section>
         <footer class="modal-card-foot">
             <button class="button" onclick="close_modal(1)">Закрыть</button>
-            <button class="button"><a href="{% url 'edit' %}">{% if houses.other|length != 0 %}Редактировать{% else %}Добавить{% endif %}</a></button>
+{#            <button class="button"><a href="{% url 'edit' %}">{% if houses.other|length != 0 %}Редактировать{% else %}Добавить{% endif %}</a></button>#}
         </footer>
     </div>
 </div>
