--- a/static/css/notifications.css
+++ b/static/css/notifications.css
@@ -14,45 +14,6 @@
     transform: translateY(0);
   }
 }
-body {
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(to bottom, #be93c5, #7bc6cc);
-  font-family: 'Source Sans Pro', sans-serif;
-  text-rendering: optimizeLegibility;
-}
-main {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-h1 {
-  color: #fff;
-  font-size: 55px;
-}
-p {
-  line-height: 1.5;
-}
-nav {
-  margin-top: 50px;
-}
-.button {
-  padding: 15px 20px;
-  border: 2px solid white;
-  border-radius: 5px;
-  font-size: 13px;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: white;
-}
-.button:hover, .button.is-active {
-  color: #be93c5;
-  background-color: white;
-}
 .top-left {
   position: fixed;
   z-index: 1000;
@@ -242,6 +203,7 @@ nav {
   }
 }
 .bottom-right.do-show {
+  font-size: 0.5rem;
   animation: slide-in-right 1s ease-in-out forwards, slide-in-right 1s ease-in-out reverse forwards 3s;
 }
 .bottom-right[data-notification-status="notice"] {
