--- a/home/templates/control_panel.html
+++ b/home/templates/control_panel.html
@@ -7,10 +7,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro|Noto+Sans+TC:300|Open+Sans+Condensed:300&display=swap"
-          rel="stylesheet">
+{#    <link href="https://fonts.googleapis.com/css?family=Maven+Pro|Noto+Sans+TC:300|Open+Sans+Condensed:300&display=swap"#}
+{#          rel="stylesheet">#}
     <script src="{% static 'js/jquery.min.js' %}"></script>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+{#    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>#}
     <!-- END of FONTS -->
     <link rel="icon" href="{% static 'images/control-panel.png' %}">
     <title>Панель</title>
@@ -53,17 +53,19 @@
 
 
 <main>
+    {% include 'components/control_panel/modals/input2.html' %}
     {% include 'components/control_panel/modals/input1.html' %}
     {% include 'components/control_panel/modals/confirm.html' %}
-    <div class="row mainer">
-        <div class="col blocks scrollbar" style="background-image: url('{% static 'images/dark_wood.png' %}');">
+    <div class="row mainer" onclick="close_menu()">
+        <div class="blocks" style="background-color: rgb(12, 12, 12); display: flex; flex-direction: column; width: 100%;" id="main">
+
+            {% include 'components/control_panel/ctrl_lamp_classic.html' %}
+        </div>
+
+        <div id="menu" class="col blocks scrollbar" style="background-image: url('{% static 'images/dark_wood.png' %}'); display: none;">
 
             {% include 'components/control_panel/menu.html' %}
 
-        </div>
-        <div class="col-10 blocks" style="background-color: rgb(12, 12, 12); display: flex; flex-direction: column;">
-
-            {% include 'components/control_panel/ctrl_lamp_classic.html' %}
         </div>
     </div>
 </main>
