--- a/home/templates/components/control_panel/ctrl_lamp_classic.html
+++ b/home/templates/components/control_panel/ctrl_lamp_classic.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="components">
+<div class="components" style=" min-height: 125px;">
     <div style="display: flex; justify-content: space-between;">
         <div><img src="{% static 'images/control_panel/lamp2.svg' %}" alt="clock" width="60px"
                   height="60px">
