--- a/home/templates/components/control_panel/header.html
+++ b/home/templates/components/control_panel/header.html
@@ -10,7 +10,7 @@
         <img src="{% static 'images/control_panel/building.svg' %}" alt="building" width="36px"
              height="36px" style="position: relative; top: 4px;">
         &nbsp;
-        Moscow: Office
+        Москва: Офис
     </div>
     <div class="col" style="position: relative; display: flex; flex-direction: row-reverse;"><img
             src="{% static 'images/control_panel/menu.svg' %}" width="32px" height="32px" alt="menu"
