--- a/home/templates/components/control_panel/menu.html
+++ b/home/templates/components/control_panel/menu.html
@@ -40,6 +40,16 @@
 </div>
 
 <div class="buttons_menu">
+    <img src="{% static 'images/control_panel/room.svg' %}" alt="Комнаты">
+    Комнаты
+</div>
+
+<div class="buttons_menu">
+    <img src="{% static 'images/control_panel/house.svg' %}" alt="Дома">
+    Дома
+</div>
+
+<div class="buttons_menu">
     <img src="{% static 'images/control_panel/tool.svg' %}" alt="Настройки">
     Настройки
 </div>
