New panel with many new components

--- a/home/templates/components/control_panel/menu.html
+++ b/home/templates/components/control_panel/menu.html
@@ -20,6 +20,11 @@
 </div>
 
 <div class="buttons_menu">
+    <img src="{% static 'images/control_panel/jalousie.svg' %}" alt="Погода">
+    Жалюзи
+</div>
+
+<div class="buttons_menu">
     <img src="{% static 'images/control_panel/lock.svg' %}" alt="Замки">
     Замки
 </div>
@@ -37,6 +42,11 @@
 <div class="buttons_menu">
     <img src="{% static 'images/control_panel/plug.svg' %}" alt="Розетки">
     Розетки
+</div>
+
+<div class="buttons_menu">
+    <img src="{% static 'images/control_panel/product.svg' %}" alt="Дома">
+    Сценарии
 </div>
 
 <div class="buttons_menu">
