--- a/home/templates/components/control_panel/header.html
+++ b/home/templates/components/control_panel/header.html
@@ -9,12 +9,7 @@
     <div class="col-5" style="padding: 21px; position: relative; top: 1px; color: #acac9f; display: flex;">
         <img src="{% static 'images/control_panel/building.svg' %}" alt="building" width="36px"
              height="36px" style="position: relative; top: 4px;">
-        &nbsp;
-<<<<<<< HEAD
-        Москва: Офис
-=======
-        <span title="На улице">{{ current_house.city }}: {{ current_house.name }}&nbsp;&nbsp;&nbsp;{{ api.temperature }}°C</span>
->>>>>>> c3d86ce1c138b91d950c7564c924136793657f62
+        <span title="На улице">&nbsp;Москва: <a style="color: #FFFFF0;">Коворкинг в центре</a>    16°C / 9°C</span>
     </div>
     <div class="col" style="position: relative; display: flex; flex-direction: row-reverse;"><img
             src="{% static 'images/control_panel/menu.svg' %}" width="32px" height="32px" alt="menu"
